==> aws/amazon-freertos/vendors/st/boards/stm32l475_discovery/ports/common_io/iot_spi.c <==
#include "stm32l4xx_ll_spi.h"
#include "stm32l4xx_hal.h"
#include "stm32l4xx_hal_spi.h"
#include "iot_spi.h"
#define IOT_SPI_BLOCKING_TIMEOUT    ( ( uint32_t ) 3000UL )
#define IOT_SPI_CLOSED              ( ( uint8_t ) 0 )
#define IOT_SPI_OPENED              ( ( uint8_t ) 1 )

IotSPIHandle_t iot_spi_open( int32_t lSpiInstance )
{
    IotSPIHandle_t xHandle = NULL;

    if( ( lSpiInstance >= 0 ) && ( lSpiInstance < sizeof( pxSpis ) / sizeof( IotSPIHandle_t ) ) )
    {
        xHandle = pxSpis[ lSpiInstance ];

        if( xHandle->sOpened == IOT_SPI_CLOSED )
        {
            if( HAL_SPI_Init( xHandle->pxSpiContext->pxSpi ) != HAL_OK )
            {
                xHandle = NULL;
            }
            else
            {
                xHandle->sOpened = IOT_SPI_OPENED;

                xHandle->xConfig.ulFreq = ( SystemCoreClock >> 1 ); /* Default prescaler is 2 and freq = clock / prescaler */
            }
        }
        else
        {
            xHandle = NULL;
        }
    }

    return xHandle;
}

int32_t iot_spi_ioctl( IotSPIHandle_t const pxSPIPeripheral,
                       IotSPIIoctlRequest_t xSPIRequest,
                       void * const pvBuffer )
{
    int32_t lError = IOT_SPI_INVALID_VALUE;

    if( ( pxSPIPeripheral != NULL ) && ( pvBuffer != NULL ) )
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        switch( xSPIRequest )
        {
            case eSPISetMasterConfig:

                if( HAL_SPI_GetState( pxSpi ) == HAL_SPI_STATE_BUSY )
                {
                    lError = IOT_SPI_BUS_BUSY;
                }
                else
                {
                    /* NOTE: HAL API sends dummy data as the same data in the master buffer. So dummy data does not need to be set in config. */
                    if( ( ( IotSPIMasterConfig_t * ) pvBuffer )->eSetBitOrder == eSPIMSBFirst )
                    {
                        LL_SPI_SetTransferBitOrder( pxSpi->Instance, SPI_FIRSTBIT_MSB );
                    }
                    else
                    {
                        LL_SPI_SetTransferBitOrder( pxSpi->Instance, SPI_FIRSTBIT_LSB );
                    }

                    switch( ( ( IotSPIMasterConfig_t * ) pvBuffer )->eMode )
                    {
                        case eSPIMode0:
                            LL_SPI_SetClockPolarity( pxSpi->Instance, SPI_POLARITY_LOW );
                            LL_SPI_SetClockPhase( pxSpi->Instance, SPI_PHASE_1EDGE );
                            break;

                        case eSPIMode1:
                            LL_SPI_SetClockPolarity( pxSpi->Instance, SPI_POLARITY_LOW );
                            LL_SPI_SetClockPhase( pxSpi->Instance, SPI_PHASE_2EDGE );
                            break;

                        case eSPIMode2:
                            LL_SPI_SetClockPolarity( pxSpi->Instance, SPI_POLARITY_HIGH );
                            LL_SPI_SetClockPhase( pxSpi->Instance, SPI_PHASE_1EDGE );
                            break;

                        case eSPIMode3:
                            LL_SPI_SetClockPolarity( pxSpi->Instance, SPI_POLARITY_HIGH );
                            LL_SPI_SetClockPhase( pxSpi->Instance, SPI_PHASE_2EDGE );
                            break;

                        default:
                            break;
                    }

                    uint32_t sysClkTmp = SystemCoreClock;
                    uint32_t preScaler = 0;
                    uint8_t divisor = 0;

                    while( ( sysClkTmp > ( ( IotSPIMasterConfig_t * ) pvBuffer )->ulFreq ) && ( divisor < 7 ) )
                    {
                        divisor++;
                        sysClkTmp = ( sysClkTmp >> 1 );
                    }

                    preScaler = ( ( ( divisor & 0x4 ) == 0 ) ? 0x0 : SPI_CR1_BR_2 ) |
                                ( ( ( divisor & 0x2 ) == 0 ) ? 0x0 : SPI_CR1_BR_1 ) |
                                ( ( ( divisor & 0x1 ) == 0 ) ? 0x0 : SPI_CR1_BR_0 );

                    LL_SPI_SetBaudRatePrescaler( pxSpi->Instance, preScaler );
                    lError = IOT_SPI_SUCCESS;
                    pxSPIPeripheral->xConfig = *( IotSPIMasterConfig_t * ) pvBuffer;
                }

                break;

            case eSPIGetMasterConfig:

                ( ( IotSPIMasterConfig_t * ) pvBuffer )->ulFreq = pxSPIPeripheral->xConfig.ulFreq;
                ( ( IotSPIMasterConfig_t * ) pvBuffer )->eMode = pxSPIPeripheral->xConfig.eMode;
                ( ( IotSPIMasterConfig_t * ) pvBuffer )->eSetBitOrder = pxSPIPeripheral->xConfig.eSetBitOrder;
                ( ( IotSPIMasterConfig_t * ) pvBuffer )->ucDummyValue = pxSPIPeripheral->xConfig.ucDummyValue;

                lError = IOT_SPI_SUCCESS;

                break;

            case eSPIGetTxNoOfbytes:

                *( int32_t * ) pvBuffer = ( int32_t ) ( pxSpi->TxXferSize - pxSpi->TxXferCount );
                lError = IOT_SPI_SUCCESS;

                break;

            case eSPIGetRxNoOfbytes:

                *( int32_t * ) pvBuffer = ( int32_t ) ( pxSpi->RxXferSize - pxSpi->RxXferCount );
                lError = IOT_SPI_SUCCESS;

                break;

            default:
                break;
        }
    }

    return lError;
}

int32_t iot_spi_read_sync( IotSPIHandle_t const pxSPIPeripheral,
                           uint8_t * const pvBuffer,
                           size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: How to find a way to tell if slave is not selected */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->sOpened == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        if( HAL_SPI_GetState( pxSpi ) == HAL_SPI_STATE_BUSY_RX )
        {
            lError = IOT_SPI_BUS_BUSY;
        }
        else if( HAL_SPI_Receive( pxSpi, pvBuffer, ( uint16_t ) xBytes, IOT_SPI_BLOCKING_TIMEOUT ) != HAL_OK )
        {
            lError = IOT_SPI_TRANSFER_ERROR;
        }
    }

    return lError;
}

int32_t iot_spi_read_async( IotSPIHandle_t const pxSPIPeripheral,
                            uint8_t * const pvBuffer,
                            size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->sOpened == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        if( HAL_SPI_GetState( pxSpi ) == HAL_SPI_STATE_BUSY_RX )
        {
            lError = IOT_SPI_BUS_BUSY;
        }
        else
        {
            HAL_NVIC_SetPriority( ( IRQn_Type ) ( ( STM32_SPI_HalContext_t * ) pxSPIPeripheral->pxSpiContext )->eIrqNum, 1, 0 );
            HAL_NVIC_EnableIRQ( ( IRQn_Type ) ( ( STM32_SPI_HalContext_t * ) pxSPIPeripheral->pxSpiContext )->eIrqNum );

            if( HAL_SPI_Receive_IT( pxSpi, pvBuffer, ( uint16_t ) xBytes ) != HAL_OK )
            {
                lError = IOT_SPI_TRANSFER_ERROR;
            }
        }
    }

    return lError;
}

int32_t iot_spi_write_sync( IotSPIHandle_t const pxSPIPeripheral,
                            uint8_t * const pvBuffer,
                            size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->sOpened == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        if( HAL_SPI_GetState( pxSpi ) == HAL_SPI_STATE_BUSY_TX )
        {
            lError = IOT_SPI_BUS_BUSY;
        }
        else if( HAL_SPI_Transmit( pxSpi, pvBuffer, ( uint16_t ) xBytes, IOT_SPI_BLOCKING_TIMEOUT ) != HAL_OK )
        {
            lError = IOT_SPI_TRANSFER_ERROR;
        }
    }

    return lError;
}

int32_t iot_spi_write_async( IotSPIHandle_t const pxSPIPeripheral,
                             uint8_t * const pvBuffer,
                             size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->sOpened == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        if( HAL_SPI_GetState( pxSpi ) == HAL_SPI_STATE_BUSY_TX )
        {
            lError = IOT_SPI_BUS_BUSY;
        }
        else
        {
            HAL_NVIC_SetPriority( ( IRQn_Type ) ( ( STM32_SPI_HalContext_t * ) pxSPIPeripheral->pxSpiContext )->eIrqNum, 1, 0 );
            HAL_NVIC_EnableIRQ( ( IRQn_Type ) ( ( STM32_SPI_HalContext_t * ) pxSPIPeripheral->pxSpiContext )->eIrqNum );

            if( HAL_SPI_Transmit_IT( pxSpi, pvBuffer, ( uint16_t ) xBytes ) != HAL_OK )
            {
                lError = IOT_SPI_TRANSFER_ERROR;
            }
        }
    }

    return lError;
}

int32_t iot_spi_transfer_sync( IotSPIHandle_t const pxSPIPeripheral,
                               uint8_t * const pvTxBuffer,
                               uint8_t * const pvRxBuffer,
                               size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->sOpened == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvTxBuffer == NULL ) || ( pvRxBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        if( HAL_SPI_GetState( pxSpi ) == HAL_SPI_STATE_BUSY_TX_RX )
        {
            lError = IOT_SPI_BUS_BUSY;
        }
        else if( HAL_SPI_TransmitReceive( pxSpi, pvTxBuffer, pvRxBuffer, ( uint16_t ) xBytes, IOT_SPI_BLOCKING_TIMEOUT ) != HAL_OK )
        {
            lError = IOT_SPI_TRANSFER_ERROR;
        }
    }

    return lError;
}

int32_t iot_spi_transfer_async( IotSPIHandle_t const pxSPIPeripheral,
                                uint8_t * const pvTxBuffer,
                                uint8_t * const pvRxBuffer,
                                size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->sOpened == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvTxBuffer == NULL ) || ( pvRxBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        if( HAL_SPI_GetState( pxSpi ) == HAL_SPI_STATE_BUSY_TX_RX )
        {
            lError = IOT_SPI_BUS_BUSY;
        }
        else
        {
            HAL_NVIC_SetPriority( ( IRQn_Type ) ( ( STM32_SPI_HalContext_t * ) pxSPIPeripheral->pxSpiContext )->eIrqNum, 1, 0 );
            HAL_NVIC_EnableIRQ( ( IRQn_Type ) ( ( STM32_SPI_HalContext_t * ) pxSPIPeripheral->pxSpiContext )->eIrqNum );

            if( HAL_SPI_TransmitReceive_IT( pxSpi, pvTxBuffer, pvRxBuffer, ( uint16_t ) xBytes ) != HAL_OK )
            {
                lError = IOT_SPI_TRANSFER_ERROR;
            }
        }
    }

    return lError;
}

int32_t iot_spi_close( IotSPIHandle_t const pxSPIPeripheral )
{
    int32_t lError = IOT_SPI_SUCCESS;

    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->sOpened == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        if( HAL_SPI_Abort( pxSpi ) != HAL_OK )
        {
            lError = IOT_SPI_BUS_BUSY;
        }
        else
        {
            /* HAL_SPI_DeInit returns OK as long as input is not NULL. */
            HAL_SPI_DeInit( pxSpi );
            pxSPIPeripheral->sOpened = IOT_SPI_CLOSED;
        }
    }

    return lError;
}

int32_t iot_spi_cancel( IotSPIHandle_t const pxSPIPeripheral )
{
    int32_t lError = IOT_SPI_INVALID_VALUE;

    if( ( pxSPIPeripheral != NULL ) && ( pxSPIPeripheral->sOpened == IOT_SPI_OPENED ) )
    {
        SPI_HandleTypeDef * pxSpi = pxSPIPeripheral->pxSpiContext->pxSpi;

        if( HAL_SPI_GetState( pxSpi ) == HAL_SPI_STATE_READY )
        {
            lError = IOT_SPI_NOTHING_TO_CANCEL;
        }
        else if( HAL_SPI_Abort( pxSpi ) == HAL_OK )
        {
            lError = IOT_SPI_SUCCESS;
        }
    }

    return lError;
}
