==> aws/amazon-freertos/vendors/nordic/boards/nrf52840-dk/ports/common_io/iot_spi.c <==
#include "nrf_drv_spi.h"
#include "nrf_gpio.h"
#include "iot_spi.h"
#include "iot_spi_config.h"
#define IOT_SPI_BLOCKING_TIMEOUT    ( ( uint32_t ) 3000UL ) /* In milliseconds */
#define IOT_SPI_CLOSED              ( ( uint8_t ) 0 )
#define IOT_SPI_OPENED              ( ( uint8_t ) 1 )

IotSPIHandle_t iot_spi_open( int32_t lSpiInstance )
{
    IotSPIHandle_t xHandle = NULL;

    if( ( lSpiInstance >= 0 ) && ( lSpiInstance < sizeof( pxSpis ) / sizeof( IotSPIHandle_t ) ) )
    {
        xHandle = pxSpis[ lSpiInstance ];

        if( xHandle->ucState == IOT_SPI_CLOSED )
        {
            const SpiContext_t * pxSpi = xHandle->pxSpiContext;

            if( NRF_SUCCESS != nrf_drv_spi_init( &pxSpi->instance, &pxSpi->config, prvSpiEventHandler, ( void * ) xHandle ) )
            {
                xHandle = NULL;
            }
            else
            {
                xHandle->ucState = IOT_SPI_OPENED;
            }
        }
        else
        {
            xHandle = NULL;
        }
    }

    return xHandle;
}

int32_t iot_spi_ioctl( IotSPIHandle_t const pxSPIPeripheral,
                       IotSPIIoctlRequest_t xSPIRequest,
                       void * const pvBuffer )
{
    int32_t lError = IOT_SPI_INVALID_VALUE;

    if( ( pxSPIPeripheral != NULL ) && ( pvBuffer != NULL ) )
    {
        SpiContext_t * pxSpi = pxSPIPeripheral->pxSpiContext;

        switch( xSPIRequest )
        {
            case eSPISetMasterConfig:

                if( !pxSpi->bTransferDone )
                {
                    lError = IOT_SPI_BUS_BUSY;
                }
                else
                {
                    IotSPIMasterConfig_t * pxUserConfig = ( IotSPIMasterConfig_t * ) pvBuffer;

                    /* Ensure valid user config inputs */
                    if( ( pxUserConfig->ulFreq != NRF_DRV_SPI_FREQ_125K ) &&
                        ( pxUserConfig->ulFreq != NRF_DRV_SPI_FREQ_250K ) &&
                        ( pxUserConfig->ulFreq != NRF_DRV_SPI_FREQ_500K ) &&
                        ( pxUserConfig->ulFreq != NRF_DRV_SPI_FREQ_1M ) &&
                        ( pxUserConfig->ulFreq != NRF_DRV_SPI_FREQ_2M ) &&
                        ( pxUserConfig->ulFreq != NRF_DRV_SPI_FREQ_4M ) &&
                        ( pxUserConfig->ulFreq != NRF_DRV_SPI_FREQ_8M ) )
                    {
                        return lError;
                    }

                    /* Prepare configuration per user request */
                    pxSpi->config.mode = ( nrf_drv_spi_mode_t ) pxUserConfig->eMode;
                    pxSpi->config.bit_order = pxUserConfig->eSetBitOrder == eSPIMSBFirst ? NRF_DRV_SPI_BIT_ORDER_MSB_FIRST : NRF_DRV_SPI_BIT_ORDER_LSB_FIRST;
                    pxSpi->config.frequency = pxUserConfig->ulFreq;
                    pxSpi->config.orc = pxUserConfig->ucDummyValue;

                    /* Re-initialize the instance with updated config */
                    nrf_drv_spi_uninit( &pxSpi->instance );

                    if( NRF_SUCCESS == nrf_drv_spi_init( &pxSpi->instance,
                                                         &pxSpi->config,
                                                         prvSpiEventHandler,
                                                         ( void * ) pxSPIPeripheral ) )
                    {
                        lError = IOT_SPI_SUCCESS;
                    }

                    pxSPIPeripheral->xConfig = *( IotSPIMasterConfig_t * ) pvBuffer;
                }

                break;

            case eSPIGetMasterConfig:

                ( ( IotSPIMasterConfig_t * ) pvBuffer )->ulFreq = pxSPIPeripheral->xConfig.ulFreq;
                ( ( IotSPIMasterConfig_t * ) pvBuffer )->eMode = pxSPIPeripheral->xConfig.eMode;
                ( ( IotSPIMasterConfig_t * ) pvBuffer )->eSetBitOrder = pxSPIPeripheral->xConfig.eSetBitOrder;
                ( ( IotSPIMasterConfig_t * ) pvBuffer )->ucDummyValue = pxSPIPeripheral->xConfig.ucDummyValue;

                lError = IOT_SPI_SUCCESS;

                break;

            /* pxSpi->instance can be used to get NRF_SPIM_Type which contains ->TX->PTR that shows address of byte to send.
             * Poiner arithmetic could be reveal n_sent/n_readm, but would need to save base address of last requested rxtx buffer.
             * There's also ->TX->AMOUNT and if it's a running counter, that may be a candidate as well. See datasheet for SPIM details.
             * Unimplemented for now.*/
            case eSPIGetTxNoOfbytes:
            case eSPIGetRxNoOfbytes:
            default:
                break;
        }
    }

    return lError;
}

int32_t iot_spi_read_sync( IotSPIHandle_t const pxSPIPeripheral,
                           uint8_t * const pvBuffer,
                           size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: How to find a way to tell if slave is not selected */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->ucState == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        const SpiContext_t * pxSpi = pxSPIPeripheral->pxSpiContext;

        lError = prvSpiTransfer( pxSPIPeripheral, NULL, 0, pvBuffer, xBytes, true );
    }

    return lError;
}

int32_t iot_spi_read_async( IotSPIHandle_t const pxSPIPeripheral,
                            uint8_t * const pvBuffer,
                            size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->ucState == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        const SpiContext_t * pxSpi = pxSPIPeripheral->pxSpiContext;

        lError = prvSpiTransfer( pxSPIPeripheral, NULL, 0, pvBuffer, xBytes, false );
    }

    return lError;
}

int32_t iot_spi_write_sync( IotSPIHandle_t const pxSPIPeripheral,
                            uint8_t * const pvBuffer,
                            size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->ucState == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        const SpiContext_t * pxSpi = pxSPIPeripheral->pxSpiContext;

        lError = prvSpiTransfer( pxSPIPeripheral, pvBuffer, xBytes, NULL, 0, true );
    }

    return lError;
}

int32_t iot_spi_write_async( IotSPIHandle_t const pxSPIPeripheral,
                             uint8_t * const pvBuffer,
                             size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->ucState == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        const SpiContext_t * pxSpi = pxSPIPeripheral->pxSpiContext;

        lError = prvSpiTransfer( pxSPIPeripheral, pvBuffer, xBytes, NULL, 0, false );
    }

    return lError;
}

int32_t iot_spi_transfer_sync( IotSPIHandle_t const pxSPIPeripheral,
                               uint8_t * const pvTxBuffer,
                               uint8_t * const pvRxBuffer,
                               size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->ucState == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvTxBuffer == NULL ) || ( pvRxBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        const SpiContext_t * pxSpi = pxSPIPeripheral->pxSpiContext;

        lError = prvSpiTransfer( pxSPIPeripheral, pvTxBuffer, xBytes, pvRxBuffer, xBytes, true );
    }

    return lError;
}

int32_t iot_spi_transfer_async( IotSPIHandle_t const pxSPIPeripheral,
                                uint8_t * const pvTxBuffer,
                                uint8_t * const pvRxBuffer,
                                size_t xBytes )
{
    int32_t lError = IOT_SPI_SUCCESS;

    /* TODO: Add case for slave not selected? */
    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->ucState == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else if( ( pvTxBuffer == NULL ) || ( pvRxBuffer == NULL ) || ( xBytes == 0 ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        const SpiContext_t * pxSpi = pxSPIPeripheral->pxSpiContext;

        lError = prvSpiTransfer( pxSPIPeripheral, pvTxBuffer, xBytes, pvRxBuffer, xBytes, false );
    }

    return lError;
}

int32_t iot_spi_close( IotSPIHandle_t const pxSPIPeripheral )
{
    int32_t lError = IOT_SPI_SUCCESS;

    if( ( pxSPIPeripheral == NULL ) || ( pxSPIPeripheral->ucState == IOT_SPI_CLOSED ) )
    {
        lError = IOT_SPI_INVALID_VALUE;
    }
    else
    {
        SpiContext_t * const pxSpi = pxSPIPeripheral->pxSpiContext;
        int32_t lCancelStatus = iot_spi_cancel( pxSPIPeripheral );

        if( ( lCancelStatus == IOT_SPI_NOTHING_TO_CANCEL ) || ( lCancelStatus == IOT_SPI_SUCCESS ) )
        {
            nrf_drv_spi_uninit( &pxSpi->instance );
            prvSetDefaultContext( pxSpi );
            pxSPIPeripheral->ucState = IOT_SPI_CLOSED;
        }
        else
        {
            lError = lCancelStatus;
        }
    }

    return lError;
}

int32_t iot_spi_cancel( IotSPIHandle_t const pxSPIPeripheral )
{
    int32_t lError = IOT_SPI_INVALID_VALUE;

    if( ( pxSPIPeripheral != NULL ) && ( pxSPIPeripheral->ucState == IOT_SPI_OPENED ) )
    {
        SpiContext_t * const pxSpi = pxSPIPeripheral->pxSpiContext;

        if( !pxSpi->bTransferDone )
        {
            nrf_drv_spi_abort( &pxSpi->instance );

            CRITICAL_REGION_ENTER();
            pxSpi->bTransferDone = true;
            CRITICAL_REGION_EXIT();

            lError = IOT_SPI_SUCCESS;
        }
        else
        {
            lError = IOT_SPI_NOTHING_TO_CANCEL;
        }
    }

    return lError;
}
